<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTLedSign</string>
    <string name="action_settings">Settings</string>
    
    <string name="strText">Text Input</string>
    <string name="strFont">Select Font</string>
    <string name="strInfo">Display Information</string>
    <string name="strPreview">Led Sign Preview</string>
    <string name="strColor">Colors</string>
    <string name="strDone">Done</string>
    <string name="strPlay">Play</string>
    <string name="strStop">Stop</string>
    <string name="strLock">VScroll Lock</string>
    <string name="strColorPick">Pick Color</string>
    <string name="strPhyRes">Physical Res</string>
    <string name="strVirRes">Virtual  Res</string>
    <string name="strBPP">Colors(bpp)</string>
    <string name="strBT">BT</string>
    <string name="strSync">Sync</string>
    
    <string name="strFileOpen">Open File</string>
    <string name="strFileSave">Save File</string>
    <string name="strFileDel">Delete</string>
    <string name="strFileNew">New File</string>
    <string name="strSavedTo">Saved to </string>
    
    
    <string name="bt_setting">BT Settings</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="connected_to">Connected to </string>
    <string name="unable_connect">Unable to connect device</string>
    <string name="connection_lost">Device connection was lost</string>   
    
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
        
</resources>
